[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/lobby/arrow.png" type="Texture" id=1]
[ext_resource path="res://objects/system/label/CustomLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/system/MenuOption.gd" type="Script" id=3]


[node name="MenuOption" type="Node2D"]
script = ExtResource( 3 )

[node name="SelectionLabel" parent="." instance=ExtResource( 2 )]
fontSize = 2
outline = true

[node name="OptionLabel" parent="." instance=ExtResource( 2 )]
position = Vector2( -20, 0 )
fontSize = 2
alignment = 2
outline = true
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="LeftArrow" type="Sprite" parent="."]
position = Vector2( -112, 5 )
z_index = 101
z_as_relative = false
texture = ExtResource( 1 )
hframes = 2

[node name="RightArrow" type="Sprite" parent="."]
position = Vector2( 112, 5 )
z_index = 101
z_as_relative = false
texture = ExtResource( 1 )
hframes = 2
frame = 1
